# verifydump

./: .gitignore  .pre-commit-config.yaml  LICENSE.md  README.md  exeentry.py  pyproject.toml  verifydump.spec
tests/: test_verifydump.py
verifydump/: cache.py  console.py  convert.py  dat.py  verify.py
