[tool.poetry]
name = "verifydump"
version = "0.1.0"
description = ""
authors = ["j68k"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
black = "^22.3.0"
pre-commit = "^2.17.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
verifydump = 'verifydump.console:run'

[tool.black]
line-length = 1000000
